# chatBot

./: .gitignore  README.md  USER_MANUAL.md  package-lock.json  sso_data.json
backend/: .env.example  package-lock.json  package.json  server.js
backend/src/: app.js
backend/src/configs/: config.js
backend/src/controllers/: chat.controller.js
backend/src/data/: sso_data.json
backend/src/prompts/: systemPrompt.js
backend/src/routes/: chat.routes.js
backend/src/services/: chat.service.js
backend/test/: config.test.js
frontend/: index.html  index2.html  jav.js  jav2.js  style.css
frontend/1/: index.html  jav.js  style.css
frontend/2/: style2.css
frontend/Chatbot/: index.html  package-lock.json  package.json  vite.config.js
frontend/Chatbot/src/: App.jsx  index.css
frontend/Chatbot/src/components/: Button.jsx  ChatBody.jsx  ChatContainer.jsx  ChatHeader.jsx  ChatText.jsx  Message.jsx  Widget.jsx
rag/: .env.example  aio_benchmark.py  app.py  checkdb.py  config.py  debug_chroma.py  loadtest.js  main.py  pyproject.toml  req.txt  scheduler.py  sso_scrapper.py  sync_all.py  test_ollama.py  test_rag.py  testsearch.py
rag/api/: main.py  schemas.py
rag/chains/: formatter.py  prompts.py  rag_chain.py
rag/data/: ingested_state.json
rag/ingestion/: downloader.py  embedder.py  loader.py  orchestrator.py  splitter.py  vectorstore.py
rag/multilingual/: __init__.py  language_detector.py  pipeline.py  translator.py  transliterator.py
rag/retriever/: retriever.py
rag/tests/: test_rag_basics.py  test_rag_chain.py
rag/vectorstore/: vectorstore.py
rag1/: main.py  requirements.txt
