[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "deep-translator>=1.11.4",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "openai-whisper>=20250625",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rapidocr>=3.9.0",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "scraper>=0.1.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]
